2-CKAD/6-Services_and_Ingress/2-Nginx_Ingress_Controller/apps_manifest/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  labels:
    app: busybox-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-app
  template:
    metadata:
      labels:
        app: busybox-app
    spec:
      containers:
      - name: busybox-container
        image: busybox
        command:
        - sh
        - -c
        - |
          echo 'Hello from Busybox!' > /var/www/index.html && \
          httpd -f -p 8080 -h /var/www
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: busybox-service
  labels:
    app: busybox-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: busybox-app
