2-CKAD/6-Services_and_Ingress/2-Nginx_Ingress_Controller/apps_manifest/5-tls-ingress_path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: default  # put the appropriate ns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - shananatestingdevops.xyz
    secretName: tls-secret
  rules:
  - host: shananatestingdevops.xyz
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: busybox-service
            port:
              number: 80
